--- a/LoanManagementSystem/Views/Accounting/BankDeposit.cshtml
+++ b/LoanManagementSystem/Views/Accounting/BankDeposit.cshtml
@@ -6,7 +6,6 @@
 
 <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
 <script src="~/Scripts/bootstrap-datepicker.js"></script>
-
 <script src="~/Scripts/Accounting.js"></script>
 
 <script language="javascript" type="text/javascript">
@@ -22,13 +21,7 @@
 
         var datepc = $('.date-picker');
         datepc.datepicker({
-            format: 'yyyy.M.dd',
-            startDate: '-3d',
-            //showOn: "both",
-            buttonImageOnly: true,
-            buttonImage: "calendar.gif",
-            buttonText: "Calendar",
-            regional: ["en-US"]
+            format: 'dd.M.yyyy'            
         });
     });
 </script>
@@ -45,7 +38,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Book.AccountBookId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.Book.AccountBookId, (SelectList)ViewBag.AccountBookList, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Book.AccountBookId, (SelectList)ViewBag.AccountBookList, htmlAttributes: new { @id = "ddlAccountBookId", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Book.AccountBookId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -53,7 +46,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Balance, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.Balance, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelForModel(Model.Balance.ToString(), new { @id = "lblBookBalance", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Balance, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -70,7 +63,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Voucher, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.Voucher, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelForModel(Model.Voucher + " ", new { @id = "txtVoucherNo", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Voucher, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -117,7 +110,7 @@
         <div class="col-md-1 form-horizontal">
             <div class="form-group">
                 <div class="col-md-10">
-                    @Html.LabelFor(model => model.Details.FirstOrDefault().InstrumentDate, htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.Details.FirstOrDefault().InstrumentDate, htmlAttributes: new { @class = "control-label date-picker" })
                 </div>
             </div>
         </div>
