--- a/LoanManagementSystem/Views/Accounting/ExpenseEntry.cshtml
+++ b/LoanManagementSystem/Views/Accounting/ExpenseEntry.cshtml
@@ -16,7 +16,7 @@
     $(document).ready(function () {
         var datepc = $('.date-picker');
         datepc.datepicker({
-            format: 'yyyy.M.dd',
+            format: 'dd.M.yyyy',
             startDate: '-3d',
             //showOn: "both",
             buttonImageOnly: true,
