--- a/LoanManagementSystem/Views/Shared/_LayoutAnonymous.cshtml
+++ b/LoanManagementSystem/Views/Shared/_LayoutAnonymous.cshtml
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Erise Login Form Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
     Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 
-    <title>@ViewBag.Title - Loan Management System</title>
+    <title>@ViewBag.Title - Pallikunnel Bankers</title>
     @*@Styles.Render("~/Content/css")*@
     @Styles.Render("~/Content/AnonymousCSS")
     @*@Styles.Render("~/Content/skin")*@
@@ -99,7 +99,10 @@
         *@
         <div class="copy-right">
             <footer>
-                &copy; 2015 YourCompany | By : <a href="http://www.designbootstrap.com/" target="_blank">DesignBootstrap</a>
+                &copy; Developed by <a>
+                    <img src="~/Content/images/technocrunch.logo.png" style="width: 100px; height: 25px;" />
+                </a>
+                @*<span class="lead"><i class="fa "></i>TechnoCrunch Lab!</span>*@
             </footer>
         </div>
     </div>
