--- a/LoanManagementSystem/Views/_ViewStart.cshtml
+++ b/LoanManagementSystem/Views/_ViewStart.cshtml
@@ -5,6 +5,6 @@
 @*@{
     if (!User.Identity.IsAuthenticated)
     {
-        return Controller.("Login", "User");
+        return Controller.("Login", "Login");
     }
 }*@
