--- a/LoanManagementSystem/Views/Accounting/CashPayment.cshtml
+++ b/LoanManagementSystem/Views/Accounting/CashPayment.cshtml
@@ -20,15 +20,7 @@
         BaseUrl = '@Url.Action("GetBookAccountDetails","Accounting")';
 
         var datepc = $('.date-picker');
-        datepc.datepicker({
-            format: 'yyyy.M.dd',
-            startDate: '-3d',
-            //showOn: "both",
-            buttonImageOnly: true,
-            buttonImage: "calendar.gif",
-            buttonText: "Calendar",
-            regional: ["en-US"]
-        });
+        datepc.datepicker({  format: 'dd.M.yyyy' });
     });
 </script>
 
@@ -53,7 +45,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Balance, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.Balance, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelForModel(Model.Balance.ToString(), new { @id="lblBookBalance", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Balance, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -70,7 +62,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Voucher, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.Voucher, new { htmlAttributes = new { @id = "txtVoucherNo", @class = "form-control" } })
+                    @Html.LabelForModel(Model.Voucher+" ", new { @id = "txtVoucherNo", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Voucher, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -149,5 +141,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ListCashReceiptPayment")
 </div>
