--- a/LoanManagementSystem/Views/Accounting/JournalEntry.cshtml
+++ b/LoanManagementSystem/Views/Accounting/JournalEntry.cshtml
@@ -6,6 +6,7 @@
 
 <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
 <script src="~/Scripts/bootstrap-datepicker.js"></script>
+<script src="~/Scripts/Accounting.js"></script>
 
 <script language="javascript" type="text/javascript">
     function SetSource(val) {
@@ -16,7 +17,7 @@
     $(document).ready(function () {
         var datepc = $('.date-picker');
         datepc.datepicker({
-            format: 'yyyy.M.dd',
+            format: 'dd.M.yyyy',
             startDate: '-3d',
             //showOn: "both",
             buttonImageOnly: true,
@@ -39,7 +40,7 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Book.AccountBookId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.Book.AccountBookId, (SelectList)ViewBag.AccountBookList, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Book.AccountBookId, (SelectList)ViewBag.AccountBookList, htmlAttributes: new { @id = "ddlAccountBookId", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Book.AccountBookId, "", new { @class = "text-danger" })
                 </div>
             </div>            
@@ -49,13 +50,13 @@
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label" })
                     @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control date-picker" } })
-                    @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })                    
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.Voucher, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.Voucher, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelForModel(Model.Voucher + " ", new { @id = "txtVoucherNo", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Voucher, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -67,7 +68,7 @@
         <div class="col-md-2 form-horizontal">
             <div class="form-group">
                 <div class="col-md-10">
-                    @Html.LabelFor(model => model.Details.FirstOrDefault().AccountHead.AccountHeadId, htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.Details.FirstOrDefault().AccountHeadId, htmlAttributes: new { @class = "control-label" })
                 </div>
             </div>
         </div>
@@ -105,9 +106,9 @@
                 <hr />
                 <div class="col-md-2 form-horizontal">
                     <div class="form-group">
-                        <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.Details[i].AccountHead.AccountHeadId, (SelectList)ViewBag.AccountHeads, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Details[i].AccountHead.AccountHeadId, "", new { @class = "text-danger" })
+                        <div class="col-md-10">                            
+                            @Html.DropDownListFor(model => model.Details[i].AccountHeadId, new SelectList(ViewBag.AccountHeads, "Value", "Text", Model.Details[i].AccountHeadId), htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Details[i].AccountHeadId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
