--- a/LoanManagementSystem/Views/Accounting/ListBankDepositWithdrawal.cshtml
+++ b/LoanManagementSystem/Views/Accounting/ListBankDepositWithdrawal.cshtml
@@ -12,7 +12,7 @@
             //var datepc = $('.date-picker');
             //if (datepc != null)
             //    datepc.datepicker({
-            //        format: 'yyyy.M.dd',
+            //        format: 'dd.M.yyyy',
             //        startDate: '-3d',
             //        //showOn: "both",
             //        buttonImageOnly: true,
@@ -55,8 +55,9 @@
                 url: '/Accounting/BankDepositWithdrawalInfo'
             };
 
-            var LinkId = function (row, column, value) {
-                var html = '<b><a target="_blank" href="/LoanRepayments/Index?LoanId=' + value + '">' + value + '</a>';
+            var LinkId = function (row, column, value, data) {
+                //console.log(data);
+                var html = '<b><a target="_blank" href="/Accounting/' + (data.TransactionTypeId == 6 ? 'BankDeposit' : 'BankWithdrawal') + '?HeaderId=' + value + '">' + value + '</a>';
                 return html;
             }
             var dataAdapter = new $.jqx.dataAdapter(source);
