--- a/LoanManagementSystem/Views/Accounting/ListJournalEntry.cshtml
+++ b/LoanManagementSystem/Views/Accounting/ListJournalEntry.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Cash Receipt Payment";
+    ViewBag.Title = "Journal";
 }
 
 @*<link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
             //var datepc = $('.date-picker');
             //if (datepc != null)
             //    datepc.datepicker({
-            //        format: 'yyyy.M.dd',
+            //        format: 'dd.M.yyyy',
             //        startDate: '-3d',
             //        //showOn: "both",
             //        buttonImageOnly: true,
