--- a/LoanManagementSystem/Views/LoanRepayments/Create.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Add Loan Repayment";
-    
+
 }
 <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
 <script src="~/Scripts/bootstrap-datepicker.js"></script>
@@ -21,7 +21,35 @@
         });
 
         $('#txtRepaymentAmount').keyup(function () {
-            $('#lblPendingPrincipalAmount').text((parseFloat($("#hdnPendingPrincipalAmount").val().length == 0 ? 0 : $("#hdnPendingPrincipalAmount").val()) - (parseFloat($('#txtRepaymentAmount').val().length == 0 ? 0 : $('#txtRepaymentAmount').val()) - parseFloat($('#hdnInterestAmount').val().length == 0 ? 0 : $('#hdnInterestAmount').val()))));
+            var pendingPrincipal = parseFloat($("#hdnPendingPrincipalAmount").val().length == 0 ? 0 : $("#hdnPendingPrincipalAmount").val());
+            var repaymentAmount = (parseFloat($('#txtRepaymentAmount').val().length == 0 ? 0 : $('#txtRepaymentAmount').val()) - parseFloat($('#hdnInterestAmount').val().length == 0 ? 0 : $('#hdnInterestAmount').val()));
+            var txtRepaymentDate = Date.parse($('#txtRepaymentDate').val());
+            var hdnLastRepaymentDate = Date.parse($('#hdnLastRepaymentDate').val());
+            var diffDays = (txtRepaymentDate - hdnLastRepaymentDate) / (3600 * 1000 * 24);
+            if (diffDays == 0)
+                diffDays = 1;
+            $('#lblPendingPrincipalAmount').text((pendingPrincipal - repaymentAmount));
+        });
+
+        $('#txtRepaymentDate').change(function () {
+            var hdnInterestRate = parseFloat($('#hdnInterestRate').val());
+            var pendingPrincipal = parseFloat($("#hdnPendingPrincipalAmount").val().length == 0 ? 0 : $("#hdnPendingPrincipalAmount").val());
+            //var repaymentAmount = (parseFloat($('#txtRepaymentAmount').val().length == 0 ? 0 : $('#txtRepaymentAmount').val()) - parseFloat($('#hdnInterestAmount').val().length == 0 ? 0 : $('#hdnInterestAmount').val()));
+            var txtRepaymentDate = Date.parse($('#txtRepaymentDate').val());
+            var hdnLastRepaymentDate = Date.parse($('#hdnLastRepaymentDate').val());
+            if(hdnLastRepaymentDate==null)
+                hdnLastRepaymentDate = txtRepaymentDate;
+            var hdnPreviousPaymentDueAmount = parseFloat($('#hdnPreviousPaymentDueAmount').val());
+            var diffDays = (txtRepaymentDate - hdnLastRepaymentDate) / (3600 * 1000 * 24);
+            //if (diffDays == 0)
+                //diffDays = 1;
+            var InterestAmount = (pendingPrincipal * (hdnInterestRate / 100) * diffDays) / 365;
+            var InstallmentAmount = @ViewBag.InstallmentAmount;
+            var repayAmount = (InstallmentAmount * diffDays) + InterestAmount + hdnPreviousPaymentDueAmount;
+            repayAmount = repayAmount.toFixed(2);
+            if(repayAmount!=null && !isNaN(repayAmount))
+                $('#txtRepaymentAmount').val(repayAmount);
+            $('#lblPendingPrincipalAmount').text((pendingPrincipal - repayAmount));
         });
     })
 
@@ -38,13 +66,15 @@
         @Html.HiddenFor(x => x.InterestAmount, new { @ID = "hdnInterestAmount" })
         @Html.HiddenFor(x => x.Status)
         @Html.HiddenFor(x => x.PrincipalAmount)
-        @Html.HiddenFor(x => x.InterestRate)
-        @Html.HiddenFor(x => x.PendingInstallments)        
+        @Html.HiddenFor(x => x.InterestRate, new { @ID = "hdnInterestRate" })
+        @Html.HiddenFor(x => x.PendingInstallments)
+        @Html.HiddenFor(x => x.RepaymentDate, new { @ID = "hdnLastRepaymentDate" })
+        @Html.HiddenFor(x => x.PreviousPaymentDueAmount, new { @ID = "hdnPreviousPaymentDueAmount" })
 
         <div class="form-group">
             @Html.LabelFor(model => model.LoanId, "LoanId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("LoanId", (SelectList)ViewBag.LoanList, htmlAttributes: new {  @ID = "ddlLoan", onchange = "document.location.href = '/LoanRepayments/Create?LoanId=' + this.options[this.selectedIndex].value;" })
+                @Html.DropDownList("LoanId", (SelectList)ViewBag.LoanList, htmlAttributes: new { @ID = "ddlLoan", onchange = "document.location.href = '/LoanRepayments/Create?LoanId=' + this.options[this.selectedIndex].value;" })
                 @Html.ValidationMessageFor(model => model.LoanId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,16 +82,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RepaymentCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RepaymentCode, new { htmlAttributes = new {  } })
-                @Html.ValidationMessageFor(model => model.RepaymentCode, "", new { @class = "text-danger" })
+                @Html.DisplayFor(model => model.RepaymentCode, new { htmlAttributes = new { } })
             </div>
         </div>
 
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.RepaymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.RepaymentDate, new { @class = "datepicker datefield", placeholder = "Enter Repayment date here..." })
+                @Html.TextBoxFor(model => model.RepaymentDate, new { @id = "txtRepaymentDate", @class = "datepicker datefield", placeholder = "Enter Repayment date here..." })
                 @Html.ValidationMessageFor(model => model.RepaymentDate)
             </div>
         </div>
@@ -93,7 +122,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RepaymentAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RepaymentAmount, new { htmlAttributes = new {  @ID = "txtRepaymentAmount" } })
+                @Html.EditorFor(model => model.RepaymentAmount, new { htmlAttributes = new { @ID = "txtRepaymentAmount" } })
                 @Html.ValidationMessageFor(model => model.RepaymentAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -101,7 +130,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PendingPrincipalAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.LabelFor(x => x.PendingPrincipalAmount, @Model.PendingPrincipalAmount.ToString("N"), new {  @ID = "lblPendingPrincipalAmount" })
+                @Html.LabelFor(x => x.PendingPrincipalAmount, @Model.PendingPrincipalAmount.ToString("N"), new { @ID = "lblPendingPrincipalAmount" })
                 @*@Html.ValidationMessageFor(model => model.PendingPrincipalAmount, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -110,7 +139,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentMode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.PaymentMode, htmlAttributes: new {  })
+                @Html.EnumDropDownListFor(model => model.PaymentMode, htmlAttributes: new { })
                 @Html.ValidationMessageFor(model => model.PaymentMode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -118,7 +147,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChequeDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.ChequeDetails, new { htmlAttributes = new {  } })
+                @Html.TextAreaFor(model => model.ChequeDetails, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.ChequeDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -126,7 +155,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new {  } })
+                @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
