--- a/LoanManagementSystem/Views/Member/Edit.cshtml
+++ b/LoanManagementSystem/Views/Member/Edit.cshtml
@@ -329,6 +329,27 @@
                         @Html.ValidationMessageFor(model => model.Description)
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.NomineeName, "Nominee Name", new { @class = "control-label" })
+                        @Html.TextAreaFor(model => model.NomineeName, new { @class = "form-control", @placeholder = "Enter Nominee Name" })
+                        @Html.ValidationMessageFor(model => model.NomineeName)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.NomineeAddress, "Nominee Address", new { @class = "control-label" })
+                        @Html.TextAreaFor(model => model.NomineeAddress, new { @class = "form-control", @placeholder = "Enter Nominee Address" })
+                        @Html.ValidationMessageFor(model => model.Description)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.NomineeRelationship, "Nominee Relationship", new { @class = "control-label" })
+                        @Html.TextAreaFor(model => model.NomineeRelationship, new { @class = "form-control", @placeholder = "Enter Nominee Relationship" })
+                        @Html.ValidationMessageFor(model => model.NomineeRelationship)
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -458,9 +479,6 @@
             </div>
         </div>
     </div>
-
-
-
 </div>
 <div class="col-md-5">
     <div class="panel panel-default">
