--- a/LoanManagementSystem/Views/Settings/Edit.cshtml
+++ b/LoanManagementSystem/Views/Settings/Edit.cshtml
@@ -33,14 +33,14 @@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @class = "form-control", data_val = false } })
                     @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control", data_val = false } })
                     @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
                 </div>
             </div>
