--- a/LoanManagementSystem/Views/Settings/StateList.cshtml
+++ b/LoanManagementSystem/Views/Settings/StateList.cshtml
@@ -11,7 +11,7 @@
             //var datepc = $('.date-picker');
             //if (datepc != null)
             //    datepc.datepicker({
-            //        format: 'yyyy.M.dd',
+            //        format: 'dd.M.yyyy',
             //        startDate: '-3d',
             //        //showOn: "both",
             //        buttonImageOnly: true,
@@ -44,7 +44,7 @@
             };
 
             var LinkId = function (row, column, value, rowData) {                
-                var html = '<b><a target="_blank" href="/Settings/SaveState?CountryId=' + rowData.CountryId + '&StateId=' + rowData.StateId + '">' + value + '</a>';
+                var html = '<b><a href="/Settings/SaveState?CountryId=' + rowData.CountryId + '&StateId=' + rowData.StateId + '">' + value + '</a>';
                 return html;
             }
             var dataAdapter = new $.jqx.dataAdapter(source);
