--- a/LoanManagementSystem/Views/Settings/TalukList.cshtml
+++ b/LoanManagementSystem/Views/Settings/TalukList.cshtml
@@ -21,7 +21,7 @@
             //var datepc = $('.date-picker');
             //if (datepc != null)
             //    datepc.datepicker({
-            //        format: 'yyyy.M.dd',
+            //        format: 'dd.M.yyyy',
             //        startDate: '-3d',
             //        //showOn: "both",
             //        buttonImageOnly: true,
@@ -103,7 +103,7 @@
             };
 
             var LinkId = function (row, column, value, rowData) {
-                var html = '<b><a target="_blank" href="/Settings/SaveTaluk?CountryId=' + $('#' + hdnUserAddressCountry).val() + '&StateId=' + $("#" + hdnUserAddressState).val() + '&DistrictId=' + $("#" + hdnUserAddressDistrict).val() + '&TalukId=' + rowData.TalukId + '">' + value + '</a>';
+                var html = '<b><a href="/Settings/SaveTaluk?CountryId=' + $('#' + hdnUserAddressCountry).val() + '&StateId=' + $("#" + hdnUserAddressState).val() + '&DistrictId=' + $("#" + hdnUserAddressDistrict).val() + '&TalukId=' + rowData.TalukId + '">' + value + '</a>';
                 return html;
             }
             var dataAdapter = new $.jqx.dataAdapter(source);
